--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,9 @@
   <body>
   <div class="wrapper">
     <header class="page-header">
-      <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
+      <a href="#" class="header-link-logo">
+        <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -129,96 +131,85 @@
         <h2 class="visually-hidden">Каталог Гостиниц</h2>
         <ul class="catalog-hotels-list">
           <li class="catalog-hotel-card">
-            <a class="hotel-card-link" href="#">
+            <a class="hotel-image-link" href="#">
               <img class="hotel-card-image" src="images/catalog/hotel-1.jpg" width="300" height="211"
                    alt="Гостиница Amara Resort & Spa">
+            </a>
+            <a class="hotel-title-link" href="#">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
-            <div class="hotel-card-information">
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 4000 ₽</span>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 4000 ₽</span>
+            <a class="button button-details" href="#">подробнее</a>
+            <button class="button button-add-favorite" type="button">в избранное</button>
+            <div class="hotel-card-stars-rate">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
+                   alt="Рейтинг гостиницы 4 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
-            <div class="hotel-card-buttons">
-              <a class="button button-details" href="#">подробнее</a>
-              <button class="button button-add-favorite" type="button">в избранное</button>
-            </div>
-            <div class="hotel-rating">
-              <div class="hotel-card-stars-rate">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              </div>
-              <b class="hotel-card-rating">Рейтинг: 8,5</b>
-            </div>
+            <b class="hotel-card-rating">Рейтинг: 8,5</b>
           </li>
           <li class="catalog-hotel-card">
-            <a class="hotel-card-link" href="#">
+            <a class="hotel-image-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-2.jpg" width="300" height="211"
                    alt="Гостиница Villas at Poco Diablo">
-              <h3 class="hotel-title">Villas at Poco Diablo</h3>
             </a>
-            <div class="hotel-card-information">
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 5000 ₽</span>
+            <a class="hotel-title-link" href="#">
+              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+            </a>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 5000 ₽</span>
+            <a class="button button-details" href="#">подробнее</a>
+            <button class="button button-in-favorite" type="button">в избранном</button>
+            <div class="hotel-card-stars-rate">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
+                   alt="Рейтинг гостиницы 4 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
-            <div class="hotel-card-buttons">
-              <a class="button button-details" href="#">подробнее</a>
-              <button class="button button-in-favorite" type="button">в избранном</button>
-            </div>
-            <div class="hotel-rating">
-              <div class="hotel-card-stars-rate">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              </div>
-              <b class="hotel-card-rating">Рейтинг: 9,2</b>
-            </div>
+            <b class="hotel-card-rating">Рейтинг: 9,2</b>
           </li>
           <li class="catalog-hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-3.jpg" width="300" height="211" alt="Гостиница Desert Quail Inn">
-              <h3 class="hotel-title">Desert Quail Inn</h3>
+            <a class="hotel-image-link" href="#">
+              <img class="hotel-image" src="images/catalog/hotel-3.jpg" width="300" height="211"
+                   alt="Гостиница Desert Quail Inn">
             </a>
-            <div class="hotel-card-information">
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 2500 ₽</span>
+            <a class="hotel-title-link" href="#">
+              <h3 class="hotel-card-title">Desert Quail Inn</h3>
+            </a>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 2500 ₽</span>
+            <a class="button button-details" href="#">подробнее</a>
+            <button class="button button-in-favorite" type="button">в избранном</button>
+            <div class="hotel-card-stars-rate">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
+                   alt="Рейтинг гостиницы 3 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
-            <div class="hotel-card-buttons">
-              <a class="button button-details" href="#">подробнее</a>
-              <button class="button button-in-favorite" type="button">в избранном</button>
-            </div>
-            <div class="hotel-rating">
-              <div class="hotel-card-stars-rate">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 3 звезды.">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              </div>
-              <b class="hotel-card-rating">Рейтинг: 6,9</b>
-            </div>
+            <b class="hotel-card-rating">Рейтинг: 6,9</b>
           </li>
           <li class="catalog-hotel-card">
-            <a class="hotel-card-link" href="#">
+            <a class="hotel-image-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-4.jpg" width="300" height="211"
                    alt="Гостиница GreenTree Inn">
-              <h3 class="hotel-title">GreenTree Inn</h3>
             </a>
-            <div class="hotel-card-information">
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 1500 ₽</span>
+            <a class="hotel-title-link" href="#">
+              <h3 class="hotel-card-title">GreenTree Inn</h3>
+            </a>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 1500 ₽</span>
+            <a class="button button-details" href="#">подробнее</a>
+            <button class="button button-in-favorite" type="button">в избранном</button>
+            <div class="hotel-card-stars-rate">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
+                   alt="Рейтинг гостиницы 2 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
-            <div class="hotel-card-buttons">
-              <a class="button button-details" href="#">подробнее</a>
-              <button class="button button-in-favorite" type="button">в избранном</button>
-            </div>
-            <div class="hotel-rating">
-              <div class="hotel-card-stars-rate">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 2 звезды.">
-                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              </div>
-              <b class="hotel-card-rating">Рейтинг: 5,0</b>
-            </div>
+            <b class="hotel-card-rating">Рейтинг: 5,0</b>
           </li>
         </ul>
       </section>
