--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="navigation-user-item">
-            <a class="button" href="#">Хочу сюда!</a>
+            <a class="button button-redirect" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -46,7 +46,10 @@
         <ol class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link home-link" href="index.html">
-              <span class="visually-hidden">Главная</span>
+              <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="breadcrumbs-home" role="img">
+                <title id="breadcrumbs-home">Вернуться на главную</title>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="m.16 6.15 6-5.5 6 5.5v6.2h-12v-6.2Zm1 .4v4.8h10v-4.8l-5-4.5-5 4.5Zm4 3.8h-1v-3.5h4v3.5h-1v-2.5h-2v2.5Z"/>
+              </svg>
             </a>
           </li>
           <li class="breadcrumbs-item">
@@ -101,7 +104,7 @@
               <label for="range-price" class="visually-hidden">Слайдер выбора цены</label>
             </fieldset>
             <div class="form-buttons-container">
-              <button type="submit" class="button button-apply-filters">Применить</button>
+              <button type="submit" class="button button-apply-filters button-action">Применить</button>
               <button type="reset" class="button button-reset-filters">Сбросить</button>
             </div>
           </form>
@@ -115,17 +118,33 @@
           <option value="high-cost">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
-        <div class="catalog-sort-view-controls">
-          <a class="button-view table-view-button view-current" href="#">
-            <span class="visually-hidden">Показать карточки</span>
-          </a>
-          <a class="button-view slider-view-button" href="#">
-            <span class="visually-hidden">Показать слайды</span>
-          </a>
-          <a class="button-view list-view-button" href="#">
-            <span class="visually-hidden">Показать список</span>
-          </a>
-        </div>
+          <ul class="catalog-view-controls">
+            <li>
+              <a class="button-view table-view-button view-current" href="#">
+                <svg width="16" height="14" aria-labelledby="view-table" role="img">
+                  <title id="view-table">Показать карточки</title>
+                  <use href="/images/icons/catalog-view.svg#table"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="button-view slider-view-button" href="#">
+                <svg width="16" height="14" aria-labelledby="view-slider" role="img">
+                  <title id="view-slider">Показать слайдер</title>
+                  <use href="/images/icons/catalog-view.svg#slider"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="button-view list-view-button" href="#">
+                <svg width="16" height="14" aria-labelledby="view-list" role="img">
+                  <title id="view-list">Показать лист</title>
+                  <use href="/images/icons/catalog-view.svg#list"></use>
+                </svg>
+                <span class="visually-hidden">Показать список</span>
+              </a>
+            </li>
+          </ul>
       </section>
       <section class="catalog-hotels">
         <h2 class="visually-hidden">Каталог Гостиниц</h2>
@@ -140,14 +159,21 @@
             </a>
             <span class="hotel-card-type">Гостиница</span>
             <span class="hotel-card-price">От 4000 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-add-favorite" type="button">в избранное</button>
-            <div class="hotel-card-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
-                   alt="Рейтинг гостиницы 4 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <a class="button button-redirect" href="#">подробнее</a>
+            <button class="button button-action" type="button">в избранное</button>
+            <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 4 звезды.">
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 8,5</b>
           </li>
@@ -161,14 +187,21 @@
             </a>
             <span class="hotel-card-type">Гостиница</span>
             <span class="hotel-card-price">От 5000 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-in-favorite" type="button">в избранном</button>
-            <div class="hotel-card-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
-                   alt="Рейтинг гостиницы 4 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <a class="button button-redirect" href="#">подробнее</a>
+            <button class="button button-selected" type="button">в избранном</button>
+            <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 4 звезды.">
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 9,2</b>
           </li>
@@ -182,13 +215,18 @@
             </a>
             <span class="hotel-card-type">Гостиница</span>
             <span class="hotel-card-price">От 2500 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-in-favorite" type="button">в избранном</button>
-            <div class="hotel-card-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
-                   alt="Рейтинг гостиницы 3 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <a class="button button-redirect" href="#">подробнее</a>
+            <button class="button button-action" type="button">в избранное</button>
+            <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 3 звезды.">
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 6,9</b>
           </li>
@@ -202,12 +240,15 @@
             </a>
             <span class="hotel-card-type">Гостиница</span>
             <span class="hotel-card-price">От 1500 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-in-favorite" type="button">в избранном</button>
-            <div class="hotel-card-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17"
-                   alt="Рейтинг гостиницы 2 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <a class="button button-redirect" href="#">подробнее</a>
+            <button class="button button-action" type="button">в избранное</button>
+            <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 2 звезды.">
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
+              <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
+                <use href="/images/icons/rating.svg#star"></use>
+              </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 5,0</b>
           </li>
@@ -217,24 +258,24 @@
       <div class="catalog-pages-controls">
         <ul class="catalog-pagination">
           <li class="catalog-pagination-item">
-            <a class="button pagination-button pagination-button-current-page" href="#">1</a>
+            <a class="button pagination-button current-page" href="#">1</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="button pagination-button" href="#">2</a>
+            <a class="button pagination-button button-action" href="#">2</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="button pagination-button" href="#">3</a>
+            <a class="button pagination-button button-action" href="#">3</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="button pagination-button" href="#">4</a>
+            <a class="button pagination-button button-action" href="#">4</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="button pagination-button" href="#">...
+            <a class="button pagination-button button-action" href="#">...
               <span class="visually-hidden">Следующие страницы</span>
             </a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="button pagination-button" href="#">10</a>
+            <a class="button pagination-button button-action" href="#">10</a>
           </li>
         </ul>
         <div class="catalog-amount-controls">
@@ -252,7 +293,7 @@
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="email">e-mail</label>
           <input type="email" id="email" name="email" placeholder="Ваш e-mail">
-          <button type="submit" class="button button-subscribe">Подписаться</button>
+          <button type="submit" class="button button-subscribe button-action">Подписаться</button>
         </form>
       </section>
     </main>
@@ -260,7 +301,7 @@
       <section class="footer-contacts">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-contacts-list">
-          <li class="footer-contacts-item">
+          <li>
             <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
               <svg width="24" height="15" aria-labelledby="vk-title" role="img">
                 <title id="vk-title">Вконтакте</title>
@@ -268,7 +309,7 @@
               </svg>
             </a>
           </li>
-          <li class="footer-contacts-item">
+          <li>
             <a class="footer-contacts-link" href="https://t.me/htmlacademy">
               <svg width="18" height="17" aria-labelledby="telegram-title" role="img">
                 <title id="telegram-title">Телеграм</title>
@@ -276,7 +317,7 @@
               </svg>
             </a>
           </li>
-          <li class="footer-contacts-item">
+          <li>
             <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
               <svg width="22" height="17" aria-labelledby="youtube-title" role="img">
                 <title id="youtube-title">Ютуб канал</title>
